<resources>
    <string name="app_name">ToDoApp</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title">Title</string>
    <string name="todo">ToDo</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="item">Item</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="xx_xx_xxxx_xx_xx">XX.XX.XXXX XX:XX</string>
    <string name="details">details</string>
    <string name="login">logIn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
</resources>